@@ -4,6 +4,8 @@ Rilascio 1.70.27    del XX/03/2016
 
 ryUnbound: corretto lo scroll orizzontale con editmode abilitato.
 
+ryWinz: riportato il titolo sull'MDI per i form senza barra (top) dei controlli.
+
 ==================================
 Rilascio 1.70.26    del 28/03/2016
 ==================================
